--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,13 @@
 .DS_Store
 node_modules/
-dist/
-npm-debug.log
-yarn-error.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+package-lock.json
 
 # Editor directories and files
 .idea
+.vscode
 *.suo
 *.ntvs*
 *.njsproj
