--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,11 @@
 .DS_Store
 node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-package-lock.json
+dist/
+npm-debug.log
+yarn-error.log
 
 # Editor directories and files
 .idea
-.vscode
 *.suo
 *.ntvs*
 *.njsproj
