--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "package": "cross-env NODE_ENV=production webpack --progress --hide-modules --config webpack.config.js"
   },
   "dependencies": {
+    "html-webpack-plugin": "^3.2.0",
     "url-loader": "^2.1.0",
     "vue": "^2.5.11"
   },
