--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "vzer-ui",
   "description": "A Vue.js project",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "author": "zengjielin <248717607@qq.com>",
   "main": "lib/vzer.js",
   "license": "MIT",
   "private": false,
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot --config webpack.dev.js",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules --config webpack.dev.js",
-    "package": "cross-env NODE_ENV=production webpack --progress --hide-modules --config webpack.config.js"
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules --config webpack.build.js",
+    "package": "cross-env NODE_ENV=production webpack --progress --hide-modules --config webpack.npm.js"
   },
   "dependencies": {
     "html-webpack-plugin": "^3.2.0",
