--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "html-webpack-plugin": "^3.2.0",
+    "postcss-loader": "^3.0.0",
     "url-loader": "^2.1.0",
     "vue": "^2.5.11"
   },
