--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot --config webpack.dev.js",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules --config webpack.build.js",
-    "package": "cross-env NODE_ENV=production webpack --progress --hide-modules --config webpack.npm.js"
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot --config config/webpack.dev.js",
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules --config config/webpack.build.js",
+    "package": "cross-env NODE_ENV=production webpack --progress --hide-modules --config config/webpack.npm.js"
   },
   "dependencies": {
     "html-webpack-plugin": "^3.2.0",
